# Compiler

./: .gitignore  .woodpecker.yml  CMakeLists.txt
include/codegen/: codegen.hpp  codegen_internal.hpp
include/compiler/: driver.hpp  module_resolver.hpp
include/extra/: ast.hpp  builtins.hpp  type_system.hpp
include/lexer/: lexer.hpp
include/optimizer/: optimizer.hpp
include/parser/: parser.hpp  scope_manager.hpp
include/plugin/: plugin_interface.hpp  plugin_manager.hpp
include/sema/: checker.hpp  sema.hpp
include/utilities/: config.hpp  env.hpp  errors.hpp  linker.hpp  logger.hpp  runtime.hpp  target.hpp  toml.hpp  utils.hpp
src/: main.cpp
src/codegen/: class.cpp  core.cpp  expressions.cpp  functions.cpp  generics.cpp  imports.cpp  interp.cpp  runtime.cpp  runtime_alloc.cpp  runtime_core.cpp  runtime_fmt.cpp  runtime_platform.cpp  runtime_std.cpp  statements.cpp  strings.cpp  types.cpp
src/compiler/: driver.cpp  module_resolver.cpp
src/extra/: builtins.cpp
src/lexer/: lexer.cpp  stringify.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp  parserUtils.cpp  symbolTable.cpp
src/parser/expressions/: add.cpp  args.cpp  array.cpp  assign.cpp  call.cpp  dsn.cpp  expr.cpp  literals.cpp  logical.cpp  member.cpp  memberCall.cpp  mul.cpp  object.cpp  operators.cpp  primary.cpp  shift.cpp  unary.cpp
src/parser/statements/: class.cpp  compileTimeIf.cpp  control_flow.cpp  declarations.cpp  enum.cpp  fn.cpp  if.cpp  loop.cpp  stmt.cpp  struct.cpp  switch.cpp  vars-fn.cpp  when.cpp  while.cpp
src/plugin/: plugin_manager.cpp
src/sema/: analyzer.cpp  declarations.cpp  diagnostics.cpp  typecheck.cpp
src/utilities/: config.cpp  errors.cpp  linker.cpp  logger.cpp  target.cpp  type_system.cpp  utils.cpp  values.cpp
std/: coff.ins  core.ins  io.ins  math.ins  mem.ins  str.ins  uefi.ins
targets/: linker.ld  x86_64-unknown-none.toml
tests/: codegen_tests.cpp  unit_tests.cpp
tests/fixtures/: arithmetic.ins  bad_type.ins  classes.ins  generic_classes.ins  generics.ins  interpolation.ins  text_index.ins
